--- a/Areas/Admin/Views/Shared/_MainLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_MainLayout.cshtml
@@ -71,6 +71,9 @@
         function _Service() {
             $(location).attr("href", "/Admin/ServiceManagement/ServiceIndex");
         }
+        function _Service2() {
+            $(location).attr("href", "/Admin/ServiceManagement/ServiceIndex2");
+        }
         function _Image() {
             $(location).attr("href", "/Admin/ImageManagement/ImageIndex");
         }
