--- a/Areas/Admin/Views/Shared/_SidenavLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_SidenavLayout.cshtml
@@ -44,6 +44,12 @@
                         </a>
                     </li> 
                     <li class="nav-item">
+                        <a class="nav-link ServiceIndex2" href="#" onclick="return _Service2()">
+                            <i class="fa fa-shopping-bag" aria-hidden="true" style="color: fuchsia"></i>
+                            <span class="nav-link-text" >Order Detail</span>
+                        </a>
+                    </li> 
+                    <li class="nav-item">
                         <a class="nav-link StaffIndex " href="#" onclick="return _Staff()">
                             <i class="fa fa-users" style="color: InactiveCaptionText" aria-hidden="true"></i>
                             <span class="nav-link-text">Staff</span>
