--- a/Areas/Admin/Views/ServiceManagement/ServiceIndex.cshtml
+++ b/Areas/Admin/Views/ServiceManagement/ServiceIndex.cshtml
@@ -30,7 +30,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header bg-primary">
-                    <h2 class="modal-title" style="color: white" id="myModalLabel">Compose News Customer</h2>
+                    <h2 class="modal-title" style="color: white" id="myModalLabel">Compose News Service</h2>
                     <button type="button" class="close fa fa-close" style="color: white" data-dismiss="modal" aria-hidden="true"></button>
                 </div>
                 <div class="form">
