--- a/Areas/Admin/Views/Shared/_MainLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_MainLayout.cshtml
@@ -80,6 +80,9 @@
         function _Staff() {
             $(location).attr("href", "/Admin/StaffManagement/StaffIndex");
         }
+        function _Authorize() {
+            $(location).attr("href", "/Admin/RoleManagement/RoleIndex");
+        }
     </script>
     @RenderSection("js", false)
 </body>
