--- a/Areas/Admin/Views/Shared/_TopnavLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_TopnavLayout.cshtml
@@ -1,4 +1,9 @@
-﻿
+﻿@using _ExcellOn_.Models
+<style>
+    .dropdown-item{
+        cursor: pointer;
+    }
+</style>
 
 <nav class="navbar navbar-top navbar-expand navbar-dark bg-primary border-bottom">
     <div class="container-fluid">
@@ -97,43 +102,43 @@
                     </div>
                 </li>
             </ul>
+            @{ 
+                UserInFo current_user = (UserInFo)Session["UserName"];
+            }
             <ul class="navbar-nav align-items-center  ml-auto ml-md-0 ">
                 <li class="nav-item dropdown">
                     <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <div class="media align-items-center">
                             <span class="avatar avatar-sm rounded-circle">
-                                <img alt="Image placeholder" src="@Url.Content(ViewBag.CurrentUser.User_Avatar)">
+                                <img alt="Image placeholder" src="@current_user.User_Avatar">
                             </span>
                             <div class="media-body  ml-2  d-none d-lg-block">
-
-                                <span class="mb-0 text-sm  font-weight-bold">@ViewBag.CurrentUser.User_Name</span>
-
-
+                                <span class="mb-0 text-sm  font-weight-bold">@current_user.User_Name</span>
                             </div>
                         </div>
                     </a>
-                    <div class="dropdown-menu  dropdown-menu-right ">
+                    <div class="dropdown-menu dropdown-menu-right ">
                         <div class="dropdown-header noti-title">
                             <h6 class="text-overflow m-0">Welcome!</h6>
                         </div>
-                        <a href="#!" class="dropdown-item">
+                        <a class="dropdown-item">
                             <i class="ni ni-single-02"></i>
                             <span onclick="return _Profile()">My profile</span>
                         </a>
-                        <a href="#!" class="dropdown-item">
+                        <a class="dropdown-item">
                             <i class="ni ni-settings-gear-65"></i>
-                            <span>Settings</span>
+                            <span onclick="return _Authorize()">Authorize</span>
                         </a>
-                        <a href="#!" class="dropdown-item">
+                        <a class="dropdown-item">
                             <i class="ni ni-calendar-grid-58"></i>
                             <span>Activity</span>
                         </a>
-                        <a href="#!" class="dropdown-item">
+                        <a class="dropdown-item">
                             <i class="ni ni-support-16"></i>
                             <span>Support</span>
                         </a>
                         <div class="dropdown-divider"></div>
-                        <a href="#!" onclick="return _Logout()" class="dropdown-item">
+                        <a onclick="return _Logout()" class="dropdown-item">
                             <i class="ni ni-user-run"></i>
                             <span>Logout</span>
                         </a>
