--- a/Areas/Admin/Views/Shared/_SidenavLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_SidenavLayout.cshtml
@@ -1,5 +1,9 @@
 ﻿
-
+<style>
+    .nav-link{
+        cursor: pointer;
+    }
+</style>
 <nav class="sidenav navbar navbar-vertical  fixed-left  navbar-expand-xs navbar-light bg-white" id="sidenav-main">
     <div class="scrollbar-inner">
         <!-- Brand -->
@@ -14,50 +18,50 @@
                 <!-- Nav items -->
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active DashboardIndex" href="#" onclick="return _Dashboard()">
+                        <a class="nav-link active DashboardIndex"  onclick="return _Dashboard()">
                             <i class="ni ni-tv-2 text-primary"></i>
                             <span class="nav-link-text" >Dashboard</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link MyProfile" href="#" onclick="return _Profile()">
+                        <a class="nav-link MyProfile"  onclick="return _Profile()">
                             <i class="ni ni-single-02 text-yellow"></i>
                             <span class="nav-link-text" >My Profile</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link CustomerIndex" href="#" onclick="return _Customer()">
+                        <a class="nav-link CustomerIndex" onclick="return _Customer()">
                             <i class="ni ni-planet text-orange"></i>
                             <span class="nav-link-text" >Customer</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link CompanyIndex" href="#" onclick="return _Company()">
+                        <a class="nav-link CompanyIndex"  onclick="return _Company()">
                             <i class="fa fa-building-o" style="color:brown" aria-hidden="true"></i>
                             <span class="nav-link-text" >Company</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link ServiceIndex " href="#" onclick="return _Service()">
+                        <a class="nav-link ServiceIndex" onclick="return _Service()">
                             <i class="fa fa-handshake-o" aria-hidden="true" style="color:darkblue"></i>
                             <span class="nav-link-text" >Service</span>
                         </a>
                     </li> 
                     <li class="nav-item">
-                        <a class="nav-link ServiceIndex2" href="#" onclick="return _Service2()">
+                        <a class="nav-link ServiceIndex2" onclick="return _Service2()">
                             <i class="fa fa-shopping-bag" aria-hidden="true" style="color: fuchsia"></i>
                             <span class="nav-link-text" >Order Detail</span>
                         </a>
                     </li> 
                     <li class="nav-item">
-                        <a class="nav-link StaffIndex " href="#" onclick="return _Staff()">
+                        <a class="nav-link StaffIndex" onclick="return _Staff()">
                             <i class="fa fa-users" style="color: InactiveCaptionText" aria-hidden="true"></i>
                             <span class="nav-link-text">Staff</span>
                         </a>
                     </li> 
                     
                     <li class="nav-item">
-                        <a class="nav-link ImageIndex" href="#" onclick="return _Image()">
+                        <a class="nav-link ImageIndex" onclick="return _Image()">
                             <i class="fa fa-picture-o" aria-hidden="true" style="color: darkorange"></i>
                             <span class="nav-link-text" >Image</span>
                         </a>
